--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
 theme: jekyll-theme-slate
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-include:
-  - README.md
+title: Free SaJiBang
+description: Free Sajibang from restrictions. Setup your Sajibang with ease.
